[project]
name = "kite"
version = "0.1.0"
description = "KITE - The Keyword Insight and Term Extraction Project"
authors = [
    {name = "David T Thompson", email = "david.thompson86@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
